--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "npm-run-all --parallel lint:watch start:devserver",
-    "start:devserver": "node node_modules/nodemon/bin/nodemon server.js",
+    "start:devserver": "node node_modules/nodemon/bin/nodemon ./server/server.js",
     "lint": "esw",
     "lint:watch": "npm run lint -- --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,7 +36,8 @@
   "nodemonConfig": {
     "ignore": [
       "test/*",
-      "docs/*"
+      "docs/*",
+      "client/app.js"
     ]
   }
 }
