--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "RESTful API Development Environment",
   "main": "index.js",
   "scripts": {
-    "start:dev": "npm-run-all --parallel lint:watch start:devserver",
-    "start:devserver": "node node_modules/nodemon/bin/nodemon ./server/server.js",
+    "start:dev": "npm-run-all --parallel lint:watch test:watch start:devserver",
+    "start:dev-s": "npm run start:dev -s",
+    "start:devserver": "node node_modules/nodemon/bin/nodemon index.js",
     "lint": "esw",
     "lint:watch": "npm run lint -- --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter progress \"test/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -27,15 +29,18 @@
     "morgan": "1.9.0"
   },
   "devDependencies": {
+    "chai": "4.1.2",
     "eslint": "5.1.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-watch": "4.0.2",
+    "mocha": "5.2.0",
     "nodemon": "1.18.3",
-    "npm-run-all": "4.1.3"
+    "npm-run-all": "4.1.3",
+    "opn": "5.3.0",
+    "supertest": "3.1.0"
   },
   "nodemonConfig": {
     "ignore": [
-      "test/*",
       "docs/*",
       "client/app.js"
     ]
