--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/sanderjetten/RESTfull-api-dev-env#readme",
   "dependencies": {
     "body-parser": "1.18.3",
+    "colors": "^1.3.1",
     "express": "4.16.3",
     "lodash": "4.17.10",
     "morgan": "1.9.0"
