--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "colors": "^1.3.1",
     "express": "4.16.3",
     "lodash": "4.17.10",
+    "mongoose": "^5.2.6",
     "morgan": "1.9.0"
   },
   "devDependencies": {
