--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/sanderjetten/RESTfull-api-dev-env#readme",
   "dependencies": {
+    "bcrypt": "3.0.0",
     "body-parser": "1.18.3",
     "colors": "^1.3.1",
     "express": "4.16.3",
+    "express-jwt": "5.3.1",
+    "jsonwebtoken": "8.3.0",
     "lodash": "4.17.10",
     "mongoose": "^5.2.6",
     "morgan": "1.9.0"
