--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "sourceType": "module"
   },
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "no-console": 1,
