--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "bcrypt": "3.0.0",
     "body-parser": "1.18.3",
     "colors": "^1.3.1",
+    "cors": "2.8.4",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "4.17.10",
+    "method-override": "3.0.0",
     "mongoose": "^5.2.6",
     "morgan": "1.9.0"
   },
